- improved Linux/Windows compliance of CFileSystem - including changes from the Eir fork - added Eirfork compilation method to Scene2Res - improved Linux compatibility of Scene2Res

--- a/FileSystem/FileSystem.vcxproj
+++ b/FileSystem/FileSystem.vcxproj
@@ -37,9 +37,9 @@
   <PropertyGroup>
     <_ProjectFileVersion>10.0.40219.1</_ProjectFileVersion>
     <OutDir Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">$(ProjectDir)lib\</OutDir>
-    <IntDir Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">$(Configuration)\</IntDir>
+    <IntDir Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">$(Configuration)_2010\</IntDir>
     <OutDir Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">$(ProjectDir)\lib\</OutDir>
-    <IntDir Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">$(Configuration)\</IntDir>
+    <IntDir Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">$(Configuration)_2010\</IntDir>
     <TargetName Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">libfs_d_2010</TargetName>
     <TargetName Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">libfs_2010</TargetName>
   </PropertyGroup>
