--- a/mta_gta3_modeL_replacer/bin/config.ini
+++ b/mta_gta3_modeL_replacer/bin/config.ini
@@ -1,7 +1,10 @@
 [General]
+; Name of the guy who converted the map
+compilator=The_GTA
 compile=false
-debug=false
-mode=GREEN
+debug=true
+; Available modes: BLUE, GREEN, EIRFORK
+mode=EIRFORK
 ; For loading and displaying LOD models
 lodSupport=true
 ; Do not replace models associated with GTA:SA buildings
@@ -9,9 +12,9 @@ preserveMainWorldIntegrity=false
 ; This is the position offset
 xOffset=0
 yOffset=0
-zOffset=1200
+zOffset=500
 ; Decides whether the output should be written into a .zip archive
-zipOutput=true
+zipOutput=false
 zipName=map.zip
 ; Determines whether all the resources are zipped into a "resources.zip" file
 zipResources=true
@@ -23,7 +26,7 @@ zipResources=true
 applyWorldConfig=false
 jetpackHeight=1000
 ; Available methods: stream, distance, static
-method=static
+method=stream
 static=false
 ; Disregards LOD collision to save streamer memory
 forceLODInherit=true
@@ -38,3 +41,22 @@ streamerMemory=256
 autoCollect=false
 ; If a model fails to laod in x frames, it marks is as dead; use 0 to disable this
 runtimeCorrection=0
+
+[MainEIRFORK]
+; Skip all world configuration settings if false (draw distance, fog, ...)
+applyWorldConfig=false
+jetpackHeight=1000
+; Available methods: stream, static
+method=stream
+static=false
+; Disregards LOD collision to save streamer memory
+forceLODInherit=true
+; Enable the cache
+cached=true
+; Memory in megabytes (cached files)
+; WARNING: Leave a big enough cache for startup texture load!
+streamerMemory=400
+
+; ----------------------- stream method vars:
+; Destroys unloaded models automatically
+autoCollect=false
