--- a/mta_gta3_modeL_replacer/src/mta-mod-imp/mta-mod-imp/mta-mod-imp.vcxproj.filters
+++ b/mta_gta3_modeL_replacer/src/mta-mod-imp/mta-mod-imp/mta-mod-imp.vcxproj.filters
@@ -10,6 +10,9 @@
     <Filter Include="blue">
       <UniqueIdentifier>{182093a6-f092-4c2c-9b12-34c7bc1fbb10}</UniqueIdentifier>
     </Filter>
+    <Filter Include="eirfork">
+      <UniqueIdentifier>{f8323c0e-e6aa-48ea-bd17-6aca231987ad}</UniqueIdentifier>
+    </Filter>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="csv.h">
@@ -39,6 +42,9 @@
     <ClInclude Include="resources.h">
       <Filter>Include</Filter>
     </ClInclude>
+    <ClInclude Include="eirfork\main_eirfork.h">
+      <Filter>eirfork</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="csv.cpp" />
@@ -52,6 +58,9 @@
     </ClCompile>
     <ClCompile Include="green\main_green.cpp">
       <Filter>green</Filter>
+    </ClCompile>
+    <ClCompile Include="eirfork\main_eirfork.cpp">
+      <Filter>eirfork</Filter>
     </ClCompile>
   </ItemGroup>
 </Project>
