- fixed tons of Scene2Res bugs + crashes - added Scene2Res collision file management, so splitting .col libraries is not required anymore (it does it automatically now)

--- a/mta_gta3_modeL_replacer/bin/config.ini
+++ b/mta_gta3_modeL_replacer/bin/config.ini
@@ -14,10 +14,13 @@ xOffset=0
 yOffset=0
 zOffset=500
 ; Decides whether the output should be written into a .zip archive
-zipOutput=false
+zipOutput=true
 zipName=map.zip
 ; Determines whether all the resources are zipped into a "resources.zip" file
 zipResources=true
+; Changes the parsing behavior of the converter to a different GTAIII engine version.
+; Supported formats: iii, vc, sa
+mapFormat=sa
 
 [MainGREEN]
 
