--- a/mta_gta3_modeL_replacer/src/mta-mod-imp/mta-mod-imp/mta-mod-imp.vcxproj.filters
+++ b/mta_gta3_modeL_replacer/src/mta-mod-imp/mta-mod-imp/mta-mod-imp.vcxproj.filters
@@ -45,6 +45,9 @@
     <ClInclude Include="eirfork\main_eirfork.h">
       <Filter>eirfork</Filter>
     </ClInclude>
+    <ClInclude Include="col.h">
+      <Filter>Include</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="csv.cpp" />
@@ -62,5 +65,6 @@
     <ClCompile Include="eirfork\main_eirfork.cpp">
       <Filter>eirfork</Filter>
     </ClCompile>
+    <ClCompile Include="col.cpp" />
   </ItemGroup>
 </Project>
