--- a/mta_gta3_modeL_replacer/src/mta-mod-imp/mta-mod-imp/mta-mod-imp.vcxproj
+++ b/mta_gta3_modeL_replacer/src/mta-mod-imp/mta-mod-imp/mta-mod-imp.vcxproj
@@ -76,7 +76,7 @@
     </ClCompile>
     <Link>
       <OutputFile>$(OutDir)ipl_mtaconv.exe</OutputFile>
-      <GenerateDebugInformation>false</GenerateDebugInformation>
+      <GenerateDebugInformation>true</GenerateDebugInformation>
       <OptimizeReferences>true</OptimizeReferences>
       <EnableCOMDATFolding>true</EnableCOMDATFolding>
       <TargetMachine>MachineX86</TargetMachine>
@@ -86,6 +86,7 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClInclude Include="blue\main_blue.h" />
+    <ClInclude Include="col.h" />
     <ClInclude Include="csv.h" />
     <ClInclude Include="eirfork\main_eirfork.h" />
     <ClInclude Include="green\main_green.h" />
@@ -98,6 +99,7 @@
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="blue\main_blue.cpp" />
+    <ClCompile Include="col.cpp" />
     <ClCompile Include="csv.cpp" />
     <ClCompile Include="eirfork\main_eirfork.cpp" />
     <ClCompile Include="green\main_green.cpp" />
