- updating source code

--- a/mta_gta3_modeL_replacer/bin/config.ini
+++ b/mta_gta3_modeL_replacer/bin/config.ini
@@ -2,7 +2,7 @@
 ; Name of the guy who converted the map
 compilator=The_GTA
 compile=false
-debug=true
+debug=false
 ; Available modes: BLUE, GREEN, EIRFORK
 mode=EIRFORK
 ; For loading and displaying LOD models
@@ -12,9 +12,9 @@ preserveMainWorldIntegrity=false
 ; This is the position offset
 xOffset=0
 yOffset=0
-zOffset=500
+zOffset=700
 ; Decides whether the output should be written into a .zip archive
-zipOutput=true
+zipOutput=false
 zipName=map.zip
 ; Determines whether all the resources are zipped into a "resources.zip" file
 zipResources=true
@@ -58,7 +58,7 @@ forceLODInherit=true
 cached=true
 ; Memory in megabytes (cached files)
 ; WARNING: Leave a big enough cache for startup texture load!
-streamerMemory=400
+streamerMemory=90
 
 ; ----------------------- stream method vars:
 ; Destroys unloaded models automatically
