--- a/MTA10/game_sa/_game_sa 2008.vcproj
+++ b/MTA10/game_sa/_game_sa 2008.vcproj
@@ -459,6 +459,10 @@
 				>
 			</File>
 			<File
+				RelativePath=".\CColModelSA.loader.cpp"
+				>
+			</File>
+			<File
 				RelativePath=".\CColPointSA.cpp"
 				>
 			</File>
@@ -1417,6 +1421,10 @@
 			</File>
 			<File
 				RelativePath=".\CColModelSA.h"
+				>
+			</File>
+			<File
+				RelativePath=".\CColModelSA.loader.h"
 				>
 			</File>
 			<File
