--- a/blueMods/depend/lua/lua5.1_lib_Linux/lua5.1_lib_Linux.cbp
+++ b/blueMods/depend/lua/lua5.1_lib_Linux/lua5.1_lib_Linux.cbp
@@ -7,7 +7,7 @@
 		<Option compiler="gcc" />
 		<Build>
 			<Target title="Debug">
-				<Option output="../lib/lua5.1_d" imp_lib="../lib/lua5.1_d.a" def_file="$(TARGET_OUTPUT_DIR)$(TARGET_OUTPUT_BASENAME).def" prefix_auto="0" extension_auto="1" />
+				<Option output="../lib/lua5.1_d.so" imp_lib="../lib/lua5.1_d" def_file="../lib/exp_d.def" prefix_auto="0" extension_auto="0" />
 				<Option working_dir="../lib" />
 				<Option object_output="obj/Debug/" />
 				<Option type="3" />
@@ -17,9 +17,12 @@
 				<Compiler>
 					<Add option="-g" />
 				</Compiler>
+				<ExtraCommands>
+					<Add after="cp ../lib/lua5.1_d.so ../../../fileSystem/lua5.1_d.so" />
+				</ExtraCommands>
 			</Target>
 			<Target title="Release">
-				<Option output="../lib/lua5.1" imp_lib="../lib/lua5.1.a" def_file="$(TARGET_OUTPUT_DIR)$(TARGET_OUTPUT_BASENAME).def" prefix_auto="0" extension_auto="1" />
+				<Option output="../lib/lua5.1.so" imp_lib="../lib/lua5.1.a" def_file="../lib/exp.def" prefix_auto="0" extension_auto="0" />
 				<Option working_dir="../lib" />
 				<Option object_output="obj/Release/" />
 				<Option type="3" />
@@ -33,6 +36,9 @@
 				<Linker>
 					<Add option="-s" />
 				</Linker>
+				<ExtraCommands>
+					<Add after="cp ../lib/lua5.1.so ../../../fileSystem/lua5.1.so" />
+				</ExtraCommands>
 			</Target>
 		</Build>
 		<Compiler>
