--- a/mta_gta3_modeL_replacer/bin/config.ini
+++ b/mta_gta3_modeL_replacer/bin/config.ini
@@ -15,11 +15,11 @@ yOffset=0
 zOffset=700
 ; Decides whether the output should be written into a .zip archive
 zipOutput=false
-zipName=map.zip
+zipName=carma.zip
 ; Determines whether all the resources are zipped into a "resources.zip" file
 zipResources=true
 ; Changes the parsing behavior of the converter to a different GTAIII engine version.
-; Supported formats: iii, vc, sa
+; Supported formats: iii, vc, sa (WIP)
 mapFormat=sa
 
 [MainGREEN]
@@ -58,7 +58,9 @@ forceLODInherit=true
 cached=true
 ; Memory in megabytes (cached files)
 ; WARNING: Leave a big enough cache for startup texture load!
-streamerMemory=90
+streamerMemory=350
+; If enabled, the script will set optimal engine streaming settings for your map
+optimizeEngine=true
 
 ; ----------------------- stream method vars:
 ; Destroys unloaded models automatically
