- added "namesCaseInsensitive" parameter to converter

--- a/mta_gta3_modeL_replacer/bin/config.ini
+++ b/mta_gta3_modeL_replacer/bin/config.ini
@@ -21,6 +21,8 @@ zipResources=true
 ; Changes the parsing behavior of the converter to a different GTAIII engine version.
 ; Supported formats: iii, vc, sa (WIP)
 mapFormat=sa
+; Set this to false so that all instance names in this converter are checked case-sensitively
+namesCaseInsensitive=true
 
 [MainGREEN]
 
