- fixed a mistake in Scene2Res that prevented negative map offsets - fixed parsing of malformed .ide and .ipl files - added debug output for malformed .ide and .ipl files

--- a/mta_gta3_modeL_replacer/bin/config.ini
+++ b/mta_gta3_modeL_replacer/bin/config.ini
@@ -23,6 +23,9 @@ zipResources=true
 mapFormat=sa
 ; Set this to false so that all instance names in this converter are checked case-sensitively
 namesCaseInsensitive=true
+; Can be either 'xml' or 'lua'
+; xml: write map objects to map xml file; lua: write map objects to server lua file
+mappingType=xml
 
 [MainGREEN]
 
