--- a/mta_gta3_modeL_replacer/bin/config.ini
+++ b/mta_gta3_modeL_replacer/bin/config.ini
@@ -47,7 +47,7 @@ streamerMemory=256
 ; ----------------------- stream method vars:
 ; Destroys unloaded models automatically
 autoCollect=false
-; If a model fails to laod in x frames, it marks is as dead; use 0 to disable this
+; If a model fails to load in x frames, it marks is as dead; use 0 to disable this
 runtimeCorrection=0
 
 [MainEIRFORK]
