- additional work on the FileSystem stream buffered wrapper (still WIP)

--- a/FileSystem/FileSystem.vcproj
+++ b/FileSystem/FileSystem.vcproj
@@ -153,6 +153,10 @@
 			Name="Include"
 			>
 			<File
+				RelativePath="..\Shared\core\fsinternal\CFileSystem.common.h"
+				>
+			</File>
+			<File
 				RelativePath="..\Shared\core\CFileSystem.h"
 				>
 			</File>
