- re-arranged FileSystem headers so that sliceOfData struct can be used by the game module - wrote a basic memory allocator that works as fixed heap (StaticMemoryAllocator) - wrote the executive manager threads implementation so that fibers can run on multiple threads at the same time -> fibers are now thread safe - decided on the fastest device state currentness algorithm currently possible - cleaned up some RenderWare plugin-based struct members by using the dynamic struct offset instead of adding them to the base structs (RpAtomic) - added engineGetRenderBucketStatistics for very internal engine performance statistics (raw metal style)

--- a/FileSystem/FileSystem.vcproj
+++ b/FileSystem/FileSystem.vcproj
@@ -153,11 +153,15 @@
 			Name="Include"
 			>
 			<File
-				RelativePath="..\Shared\core\fsinternal\CFileSystem.common.h"
+				RelativePath="..\Shared\core\CFileSystem.common.h"
 				>
 			</File>
 			<File
 				RelativePath="..\Shared\core\CFileSystem.h"
+				>
+			</File>
+			<File
+				RelativePath="..\Shared\core\fsinternal\CFileSystem.internal.common.h"
 				>
 			</File>
 			<File
