- fixed some font rendering bugs in the MTA:Lua Interpreter - started working on multi-threading support for MTA:Lua (a.k.a. Lua 5.1ex) - working on custom heap allocators to simplify heap debugging when required (also fixing bugs in dbgheap.cpp) - removed some useless Lua 5.1 leftovers from LuaJIT experimentation (we cannot use that anyway) - improved the Lua header system by introducing a "luacore.h" file as _precompiled header_ (whenever necessary) - added plugin support to Lua types (for better abstraction of the MTA:Lua runtime)
TODO:
- fix a heap corruption bug in the new Lua system (have to fix dbgheap.cpp for that)

--- a/MTA10/core/_Core 2008.vcproj
+++ b/MTA10/core/_Core 2008.vcproj
@@ -1910,6 +1910,10 @@
 						>
 					</File>
 					<File
+						RelativePath="..\..\Shared\core\COSUtils.h"
+						>
+					</File>
+					<File
 						RelativePath="..\..\Shared\core\interface.h"
 						>
 					</File>
