--- a/MTA10/game_sa/_game_sa 2008.vcproj
+++ b/MTA10/game_sa/_game_sa 2008.vcproj
@@ -1964,6 +1964,10 @@
 				>
 			</File>
 			<File
+				RelativePath=".\CThreadingUtilsSA.h"
+				>
+			</File>
+			<File
 				RelativePath=".\CTrainSA.h"
 				>
 			</File>
