--- a/ps2 export tool/modded_vendor/rwtools-master/rwtools/rwtools.vcproj
+++ b/ps2 export tool/modded_vendor/rwtools-master/rwtools/rwtools.vcproj
@@ -108,7 +108,7 @@
 				EnableIntrinsicFunctions="true"
 				FavorSizeOrSpeed="1"
 				OmitFramePointers="true"
-				AdditionalIncludeDirectories="../include/;../../../../Shared/sdk/"
+				AdditionalIncludeDirectories="../include/;../../../../Shared/sdk/;../../../../Shared/"
 				RuntimeLibrary="2"
 				EnableFunctionLevelLinking="true"
 				UsePrecompiledHeader="0"
