- rewrote the texture swizzling algorithm so it makes more sense (still WIP, there are weird things left) - fixed the mipmap coordinate allocation in GS memory (it now matches the R* converter) - fixed the PS2 GS memory size calculation code (it now takes the CLUT texture into account instead of palette item count)
TODO: fix the CLUT management (texture allocation + unCLUT)

I hope I get this done by new year eve!

--- a/ps2 export tool/modded_vendor/rwtools-master/rwtools/rwtools.vcproj
+++ b/ps2 export tool/modded_vendor/rwtools-master/rwtools/rwtools.vcproj
@@ -201,6 +201,10 @@
 				>
 			</File>
 			<File
+				RelativePath="..\src\txdread.ps2gsman.hxx"
+				>
+			</File>
+			<File
 				RelativePath="..\src\txdread.xbox.hxx"
 				>
 			</File>
