- fixed parsing of PS2 GTA Vice City TXD files (maybe never tried them before) - added IMG compression support - made compressionQuality do something for DXT (if 1.0 then DXT5 is used) - various fixes

--- a/ps2 export tool/releases/txdgen.ini
+++ b/ps2 export tool/releases/txdgen.ini
@@ -12,3 +12,4 @@ ignoreSecureWarnings=true
 reconstructIMGArchives=false
 fixIncompatibleRasters=true
 dxtPackedDecompression=false
+imgArchivesCompressed=false
