- fixed a crash that happened when building IMG archives - added support for IMG_VERSION_1 IMG archive building - added a new version parameter to imgimport.exe, so you can now create IMG_VERSION_1 archives - fixed a bug in TxdGen that caused errors in the formatting of PC format TXDs - fixed the version of GTAIII (3.1.0.0 -> 3.1.0.1) - added a callstack dump to TxdGen in case the converter crashes (should not happen, anyway) - various fixes :-)

--- a/ps2 export tool/other/ps2txdgen/ps2txdgen.vcproj
+++ b/ps2 export tool/other/ps2txdgen/ps2txdgen.vcproj
@@ -132,6 +132,7 @@
 			/>
 			<Tool
 				Name="VCLinkerTool"
+				AdditionalOptions="/SAFESEH:NO"
 				AdditionalDependencies="libfs.lib rwtools.lib"
 				OutputFile="$(ProjectDir)..\..\output\txdgen.exe"
 				AdditionalLibraryDirectories="&quot;../../modded_vendor/rwtools-master/output/&quot;;../../../FileSystem/lib/"
@@ -180,6 +181,10 @@
 				>
 			</File>
 			<File
+				RelativePath="..\..\..\Shared\debugsdk\dbgtrace.h"
+				>
+			</File>
+			<File
 				RelativePath=".\ide.h"
 				>
 			</File>
@@ -214,6 +219,10 @@
 		</File>
 		<File
 			RelativePath="..\..\..\Shared\debugsdk\dbgheap.cpp"
+			>
+		</File>
+		<File
+			RelativePath="..\..\..\Shared\debugsdk\dbgtrace.cpp"
 			>
 		</File>
 		<File
